# KG-Agent-any-data-

./: .env  .gitignore  README.md  create_pdf.py  kg_inspector.py  llm_provider.py  pyproject.toml  results.json  stats.json  test.py
data/csv/: test.csv
data/pdf/: test.txt
schemas/: test_schema.json
test_data/: medical_schema.json
test_data/csv/: doctors.csv  medications.csv  patients.csv  prescriptions.csv
test_data/pdf/: drug_interactions.txt  research_paper.txt
tests/: create.py  test.basic.py
unified_kg/: app.py  config.py  main.py  rag_agent.py
unified_kg/core/: data_processor.py  entity_resolution.py  kg_builder.py  schema_manager.py
