[project]
name = "kg-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhinav Katiyar"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "transformers (>=4.51.0,<5.0.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "openai (>=1.71.0,<2.0.0)",
    "dash (>=3.0.2,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "json-repair (>=0.40.0,<0.41.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)"
   
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
